--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 $theme-colors: (
   "secondary": #962d22,
@@ -9,7 +9,7 @@ $theme-colors: (
 @import "~bootstrap/scss/bootstrap";
 
 body {
-  font-family: 'Fira Sans', Helvetica Neue, Verdana, sans-serif;
+  font-family: 'Inter', Helvetica Neue, Verdana, sans-serif;
 }
 
 :global .disabled {
