:sparkles: add provision action

--- a/apps/onboarding-jobtype-config/src/App.scss
+++ b/apps/onboarding-jobtype-config/src/App.scss
@@ -8,6 +8,6 @@ body {
   font-family: 'Inter', Helvetica Neue, Verdana, sans-serif;
 }
 
-:global .disabled {
+.disabled {
   cursor: not-allowed;
 }
