--- a/apps/media-manager/src/components/Header/Header.module.scss
+++ b/apps/media-manager/src/components/Header/Header.module.scss
@@ -2,9 +2,24 @@
 @use 'sass:color';
 
 .title {
-  font-size: 8rem;
   font-weight: 900;
   line-height: .9;
+
+  @include media-breakpoint-only(xs) {
+    font-size: 4rem;
+  }
+
+  @include media-breakpoint-only(sm) {
+    font-size: 5rem;
+  }
+
+  @include media-breakpoint-only(md) {
+    font-size: 6rem;
+  }
+
+  @include media-breakpoint-up(lg) {
+    font-size: 8rem;
+  }
 }
 
 .back {
